qt6/gen_qspinbox.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSpinBox QSpinBox;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QSpinBox* QSpinBox_new(QWidget* parent);
QSpinBox* QSpinBox_new2();
QMetaObject* QSpinBox_metaObject(const QSpinBox* self);
void* QSpinBox_metacast(QSpinBox* self, const char* param1);
int QSpinBox_metacall(QSpinBox* self, int param1, int param2, void** param3);
struct miqt_string QSpinBox_tr(const char* s);
int QSpinBox_value(const QSpinBox* self);
struct miqt_string QSpinBox_prefix(const QSpinBox* self);
void QSpinBox_setPrefix(QSpinBox* self, struct miqt_string prefix);
struct miqt_string QSpinBox_suffix(const QSpinBox* self);
void QSpinBox_setSuffix(QSpinBox* self, struct miqt_string suffix);
struct miqt_string QSpinBox_cleanText(const QSpinBox* self);
int QSpinBox_singleStep(const QSpinBox* self);
void QSpinBox_setSingleStep(QSpinBox* self, int val);
int QSpinBox_minimum(const QSpinBox* self);
void QSpinBox_setMinimum(QSpinBox* self, int min);
int QSpinBox_maximum(const QSpinBox* self);
void QSpinBox_setMaximum(QSpinBox* self, int max);
void QSpinBox_setRange(QSpinBox* self, int min, int max);
int QSpinBox_stepType(const QSpinBox* self);
void QSpinBox_setStepType(QSpinBox* self, int stepType);
int QSpinBox_displayIntegerBase(const QSpinBox* self);
void QSpinBox_setDisplayIntegerBase(QSpinBox* self, int base);
void QSpinBox_setValue(QSpinBox* self, int val);
void QSpinBox_valueChanged(QSpinBox* self, int param1);
void QSpinBox_connect_valueChanged(QSpinBox* self, intptr_t slot);
void QSpinBox_textChanged(QSpinBox* self, struct miqt_string param1);
void QSpinBox_connect_textChanged(QSpinBox* self, intptr_t slot);
struct miqt_string QSpinBox_tr2(const char* s, const char* c);
struct miqt_string QSpinBox_tr3(const char* s, const char* c, int n);
bool QSpinBox_override_virtual_metacall(void* self, intptr_t slot);
int QSpinBox_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSpinBox_override_virtual_event(void* self, intptr_t slot);
bool QSpinBox_virtualbase_event(void* self, QEvent* event);
bool QSpinBox_override_virtual_validate(void* self, intptr_t slot);
int QSpinBox_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QSpinBox_override_virtual_valueFromText(void* self, intptr_t slot);
int QSpinBox_virtualbase_valueFromText(const void* self, struct miqt_string text);
bool QSpinBox_override_virtual_textFromValue(void* self, intptr_t slot);
struct miqt_string QSpinBox_virtualbase_textFromValue(const void* self, int val);
bool QSpinBox_override_virtual_fixup(void* self, intptr_t slot);
void QSpinBox_virtualbase_fixup(const void* self, struct miqt_string str);
bool QSpinBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QSpinBox_virtualbase_sizeHint(const void* self);
bool QSpinBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QSpinBox_virtualbase_minimumSizeHint(const void* self);
bool QSpinBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QSpinBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QSpinBox_override_virtual_stepBy(void* self, intptr_t slot);
void QSpinBox_virtualbase_stepBy(void* self, int steps);
bool QSpinBox_override_virtual_clear(void* self, intptr_t slot);
void QSpinBox_virtualbase_clear(void* self);
bool QSpinBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QSpinBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QSpinBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QSpinBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QSpinBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QSpinBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QSpinBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QSpinBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_changeEvent(void* self, QEvent* event);
bool QSpinBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QSpinBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QSpinBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QSpinBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QSpinBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QSpinBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSpinBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QSpinBox_override_virtual_showEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_showEvent(void* self, QShowEvent* event);
bool QSpinBox_override_virtual_initStyleOption(void* self, intptr_t slot);
void QSpinBox_virtualbase_initStyleOption(const void* self, QStyleOptionSpinBox* option);
bool QSpinBox_override_virtual_stepEnabled(void* self, intptr_t slot);
int QSpinBox_virtualbase_stepEnabled(const void* self);
bool QSpinBox_override_virtual_devType(void* self, intptr_t slot);
int QSpinBox_virtualbase_devType(const void* self);
bool QSpinBox_override_virtual_setVisible(void* self, intptr_t slot);
void QSpinBox_virtualbase_setVisible(void* self, bool visible);
bool QSpinBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QSpinBox_virtualbase_heightForWidth(const void* self, int param1);
bool QSpinBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QSpinBox_virtualbase_hasHeightForWidth(const void* self);
bool QSpinBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QSpinBox_virtualbase_paintEngine(const void* self);
bool QSpinBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QSpinBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
void QSpinBox_virtualbase_leaveEvent(void* self, QEvent* event);