qt6/gen_qspinbox.nim


proc fcQSpinBox_new(parent: pointer): ptr cQSpinBox {.importc: "QSpinBox_new".}
proc fcQSpinBox_new2(): ptr cQSpinBox {.importc: "QSpinBox_new2".}
proc fcQSpinBox_metaObject(self: pointer, ): pointer {.importc: "QSpinBox_metaObject".}
proc fcQSpinBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QSpinBox_metacast".}
proc fcQSpinBox_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSpinBox_metacall".}
proc fcQSpinBox_tr(s: cstring): struct_miqt_string {.importc: "QSpinBox_tr".}
proc fcQSpinBox_value(self: pointer, ): cint {.importc: "QSpinBox_value".}
proc fcQSpinBox_prefix(self: pointer, ): struct_miqt_string {.importc: "QSpinBox_prefix".}
proc fcQSpinBox_setPrefix(self: pointer, prefix: struct_miqt_string): void {.importc: "QSpinBox_setPrefix".}
proc fcQSpinBox_suffix(self: pointer, ): struct_miqt_string {.importc: "QSpinBox_suffix".}
proc fcQSpinBox_setSuffix(self: pointer, suffix: struct_miqt_string): void {.importc: "QSpinBox_setSuffix".}
proc fcQSpinBox_cleanText(self: pointer, ): struct_miqt_string {.importc: "QSpinBox_cleanText".}
proc fcQSpinBox_singleStep(self: pointer, ): cint {.importc: "QSpinBox_singleStep".}
proc fcQSpinBox_setSingleStep(self: pointer, val: cint): void {.importc: "QSpinBox_setSingleStep".}
proc fcQSpinBox_minimum(self: pointer, ): cint {.importc: "QSpinBox_minimum".}
proc fcQSpinBox_setMinimum(self: pointer, min: cint): void {.importc: "QSpinBox_setMinimum".}
proc fcQSpinBox_maximum(self: pointer, ): cint {.importc: "QSpinBox_maximum".}
proc fcQSpinBox_setMaximum(self: pointer, max: cint): void {.importc: "QSpinBox_setMaximum".}
proc fcQSpinBox_setRange(self: pointer, min: cint, max: cint): void {.importc: "QSpinBox_setRange".}
proc fcQSpinBox_stepType(self: pointer, ): cint {.importc: "QSpinBox_stepType".}
proc fcQSpinBox_setStepType(self: pointer, stepType: cint): void {.importc: "QSpinBox_setStepType".}
proc fcQSpinBox_displayIntegerBase(self: pointer, ): cint {.importc: "QSpinBox_displayIntegerBase".}
proc fcQSpinBox_setDisplayIntegerBase(self: pointer, base: cint): void {.importc: "QSpinBox_setDisplayIntegerBase".}
proc fcQSpinBox_setValue(self: pointer, val: cint): void {.importc: "QSpinBox_setValue".}
proc fcQSpinBox_valueChanged(self: pointer, param1: cint): void {.importc: "QSpinBox_valueChanged".}
proc fQSpinBox_connect_valueChanged(self: pointer, slot: int) {.importc: "QSpinBox_connect_valueChanged".}
proc fcQSpinBox_textChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QSpinBox_textChanged".}
proc fQSpinBox_connect_textChanged(self: pointer, slot: int) {.importc: "QSpinBox_connect_textChanged".}
proc fcQSpinBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSpinBox_tr2".}
proc fcQSpinBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSpinBox_tr3".}
proc fQSpinBox_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSpinBox_virtualbase_metacall".}
proc fcQSpinBox_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_metacall".}
proc fQSpinBox_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSpinBox_virtualbase_event".}
proc fcQSpinBox_override_virtual_event(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_event".}
proc fQSpinBox_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QSpinBox_virtualbase_validate".}
proc fcQSpinBox_override_virtual_validate(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_validate".}
proc fQSpinBox_virtualbase_valueFromText(self: pointer, text: struct_miqt_string): cint{.importc: "QSpinBox_virtualbase_valueFromText".}
proc fcQSpinBox_override_virtual_valueFromText(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_valueFromText".}
proc fQSpinBox_virtualbase_textFromValue(self: pointer, val: cint): struct_miqt_string{.importc: "QSpinBox_virtualbase_textFromValue".}
proc fcQSpinBox_override_virtual_textFromValue(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_textFromValue".}
proc fQSpinBox_virtualbase_fixup(self: pointer, str: struct_miqt_string): void{.importc: "QSpinBox_virtualbase_fixup".}
proc fcQSpinBox_override_virtual_fixup(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_fixup".}
proc fQSpinBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QSpinBox_virtualbase_sizeHint".}
proc fcQSpinBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_sizeHint".}
proc fQSpinBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QSpinBox_virtualbase_minimumSizeHint".}
proc fcQSpinBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_minimumSizeHint".}
proc fQSpinBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QSpinBox_virtualbase_inputMethodQuery".}
proc fcQSpinBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_inputMethodQuery".}
proc fQSpinBox_virtualbase_stepBy(self: pointer, steps: cint): void{.importc: "QSpinBox_virtualbase_stepBy".}
proc fcQSpinBox_override_virtual_stepBy(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_stepBy".}
proc fQSpinBox_virtualbase_clear(self: pointer, ): void{.importc: "QSpinBox_virtualbase_clear".}
proc fcQSpinBox_override_virtual_clear(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_clear".}
proc fQSpinBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_resizeEvent".}
proc fcQSpinBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_resizeEvent".}
proc fQSpinBox_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_keyPressEvent".}
proc fcQSpinBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_keyPressEvent".}
proc fQSpinBox_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_keyReleaseEvent".}
proc fcQSpinBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_keyReleaseEvent".}
proc fQSpinBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_wheelEvent".}
proc fcQSpinBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_wheelEvent".}
proc fQSpinBox_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_focusInEvent".}
proc fcQSpinBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_focusInEvent".}
proc fQSpinBox_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_focusOutEvent".}
proc fcQSpinBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_focusOutEvent".}
proc fQSpinBox_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_contextMenuEvent".}
proc fcQSpinBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_contextMenuEvent".}
proc fQSpinBox_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_changeEvent".}
proc fcQSpinBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_changeEvent".}
proc fQSpinBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_closeEvent".}
proc fcQSpinBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_closeEvent".}
proc fQSpinBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_hideEvent".}
proc fcQSpinBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_hideEvent".}
proc fQSpinBox_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_mousePressEvent".}
proc fcQSpinBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_mousePressEvent".}
proc fQSpinBox_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_mouseReleaseEvent".}
proc fcQSpinBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_mouseReleaseEvent".}
proc fQSpinBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_mouseMoveEvent".}
proc fcQSpinBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_mouseMoveEvent".}
proc fQSpinBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_timerEvent".}
proc fcQSpinBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_timerEvent".}
proc fQSpinBox_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_paintEvent".}
proc fcQSpinBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_paintEvent".}
proc fQSpinBox_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_showEvent".}
proc fcQSpinBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_showEvent".}
proc fQSpinBox_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QSpinBox_virtualbase_initStyleOption".}
proc fcQSpinBox_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_initStyleOption".}
proc fQSpinBox_virtualbase_stepEnabled(self: pointer, ): cint{.importc: "QSpinBox_virtualbase_stepEnabled".}
proc fcQSpinBox_override_virtual_stepEnabled(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_stepEnabled".}
proc fQSpinBox_virtualbase_devType(self: pointer, ): cint{.importc: "QSpinBox_virtualbase_devType".}
proc fcQSpinBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_devType".}
proc fQSpinBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QSpinBox_virtualbase_setVisible".}
proc fcQSpinBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_setVisible".}
proc fQSpinBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QSpinBox_virtualbase_heightForWidth".}
proc fcQSpinBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_heightForWidth".}
proc fQSpinBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QSpinBox_virtualbase_hasHeightForWidth".}
proc fcQSpinBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_hasHeightForWidth".}
proc fQSpinBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QSpinBox_virtualbase_paintEngine".}
proc fcQSpinBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_paintEngine".}
proc fQSpinBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_mouseDoubleClickEvent".}
proc fcQSpinBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_mouseDoubleClickEvent".}
proc fQSpinBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_enterEvent".}
proc fcQSpinBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_enterEvent".}
proc fQSpinBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_leaveEvent".}
